code refactoring and optimization
