# docs/openapi/api-internal-v1.yaml
@@ -1,324 +1,359 @@
-swagger: '2.0'
+openapi: 3.0.3
 info:
   version: 1.0.0
-  title: Swagger log extractor
+  title: openapi LogExtractor project
   description: API description for log extractor project
+  license:
+    name: Licenza di PN
+    url: 'https://da-definire/'
+servers:
+  - url: https://api.backoffice.pn.pagopa.it
+    description: Production environment
+  - url: https://api.backoffice.uat.pn.pagopa.it
+    description: Test environment
+  - url: https://api.backoffice.dev.pn.pagopa.it
+    description: Development environment
 tags:
   - name: persons
     description: Operations about a person
   - name: logs
-    description: Operations about logs
-  - name: healthcheck
+    description: Operations about logs and extractions
+  - name: healthCheck
     description: Operations about application status
-basePath: "/logextractor/v1"
-schemes:
-  - https
-  - http
+
 paths:
-  '/persons/person-id':
+  '/persons/v1/person-id':
     post:
       tags:
         - persons
-      operationId: getPersonUniqueIdentifier
-      summary: Get the person's unique identifier
-      description: Return the person's unique identifier
-      produces:
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "PersonPersonId"
-          description: ""
-          required: true
-          schema:
-            $ref: "#/definitions/PersonPersonIdRequest"
+      operationId: getPersonalPersonId
+      description: Get the unique identifier of a person
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PersonPersonIdRequestDto'
       responses:
         '200':
           description: The operation has been successfully completed
-          schema:
-            $ref: '#/definitions/PersonData'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetBasicDataResponseDto'
         '400':
-          description: In case of errors during the request validation
-          schema:
-            $ref: '#/definitions/ApiError400'
+          description: Errors during the request validation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
         '500':
-          description: In case of errors during the request elaboration
-          schema:
-            $ref: '#/definitions/ApiError500'
-  '/persons/tax-id':
+          description: Errors during the request elaboration
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+  '/persons/v1/tax-id':
     post:
       tags:
         - persons
-      operationId: getPersonTaxId
-      summary: Get the person's unique identifier
-      description: Return the person's tax id
-      produces:
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "PersonTaxId"
-          description: ""
-          required: true
-          schema:
-            $ref: "#/definitions/PersonTaxIdRequest"
+      operationId: getPersonalTaxId
+      description: Get the tax id of a person
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PersonTaxIdRequestDto'
       responses:
         '200':
           description: The operation has been successfully completed
-          schema:
-            $ref: '#/definitions/PersonData'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetBasicDataResponseDto'
         '400':
-          description: In case of errors during the request validation
-          schema:
-            $ref: '#/definitions/ApiError400'
+          description: Errors during the request validation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
         '500':
-          description: In case of errors during the request elaboration
-          schema:
-            $ref: '#/definitions/ApiError500'
-  '/logs/notifications/info':
+          description: Errors during the request elaboration
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+  '/logs/v1/notifications/info':
     post:
       tags:
-      - "logs"
-      summary: "Download the logs' archive containing the full info of a notification"
-      description: ""
-      operationId: "getNotificationsInfoLogs"
-      produces:
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "NotificationInfo"
-        description: ""
+        - logs
+      operationId: getNotificationInfoLogs
+      description: Download the logs archive containing the full info of a notification
+      requestBody:
         required: true
-        schema:
-          $ref: "#/definitions/NotificationInfo"
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NotificationInfoRequestDto'
       responses:
         '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/BaseResponse'
+          description: The operation has been successfully completed
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BaseResponseDTO'
         '400':
-          description: In case of errors during the request validation
-          schema:
-            $ref: '#/definitions/ApiError400'
+          description: Errors during the request validation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
         '500':
-          description: In case of errors during the request elaboration
-          schema:
-            $ref: '#/definitions/ApiError500'
-  '/logs/notifications/monthly':
+          description: Errors during the request elaboration
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+  '/logs/v1/notifications/monthly':
     post:
       tags:
-      - "logs"
-      summary: "Download the logs' archive containing the notifications sent in a specific month"
-      description: "Download the zip file and return the password to be shown to the user"
-      operationId: "getNotificationsMonthlyStatsLogs"
-      produces:
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "MonthlyNotificationsInfo"
-        description: ""
+        - logs
+      operationId: getNotificationsInMonth
+      description: Download the logs archive containing the notifications sent in a specific month
+      requestBody:
         required: true
-        schema:
-          $ref: "#/definitions/MonthlyNotifications"
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MonthlyNotificationsRequestDto'
       responses:
         '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/BaseResponse'
+          description: The operation has been successfully completed
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BaseResponseDTO'
         '400':
-          description: In case of errors during the request validation
-          schema:
-            $ref: '#/definitions/ApiError400'
+          description: Errors during the request validation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
         '500':
-          description: In case of errors during the request elaboration
-          schema:
-            $ref: '#/definitions/ApiError500'
-  '/logs/persons':
+          description: Errors during the request elaboration
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+  '/logs/v1/persons':
     post:
       tags:
-      - "logs"
-      summary: "Download the logs' archive related to a person's own activities or on a notification"
-      description: "Download the zip file and return the password to be shown to the user"
-      operationId: "getPersonsLogs"
-      produces:
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "PersonsLogInfo"
-        description: ""
+        - logs
+      operationId: getPersonActivityLogs
+      description: Download the logs archive related to a person's own activities or on a notification
+      requestBody:
         required: true
-        schema:
-          $ref: "#/definitions/PersonsData"
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PersonLogsRequestDto'
       responses:
         '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/BaseResponse'
+          description: The operation has been successfully completed
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BaseResponseDTO'
         '400':
-          description: In case of errors during the request validation
-          schema:
-            $ref: '#/definitions/ApiError400'
+          description: Errors during the request validation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
         '500':
-          description: In case of errors during the request elaboration
-          schema:
-            $ref: '#/definitions/ApiError500'
-  '/logs/processes':
+          description: Errors during the request elaboration
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+  '/logs/v1/processes':
     post:
       tags:
-      - "logs"
-      summary: "Download the logs' archive related to a process"
-      description: "Download the zip file and return the password to be shown to the user"
-      operationId: "getProcessesLogs"
-      produces:
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "ProcessesLogInfo"
-        description: ""
+        - logs
+      operationId: getNotificationTraceIdLogs
+      description: Download the logs archive related to a process
+      requestBody:
         required: true
-        schema:
-          $ref: "#/definitions/ProcessData"
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TraceIdLogsRequestDto'
       responses:
         '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/BaseResponse'
+          description: The operation has been successfully completed
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BaseResponseDTO'
         '400':
-          description: In case of errors during the request validation
-          schema:
-            $ref: '#/definitions/ApiError400'
+          description: Errors during the request validation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
         '500':
-          description: In case of errors during the request elaboration
-          schema:
-            $ref: '#/definitions/ApiError500'
-definitions:
-  PersonTaxIdRequest:
-    type: object
-    required:
-      - personId
-    properties:
-      personId:
-        type: string
-  PersonPersonIdRequest:
-    type: object
-    required:
-      - ticketNumber
-      - taxId
-      - recipientType
-    properties:
-      ticketNumber:
-        type: string
-      taxId:
-        type: string
-      recipientType:
-        type: string
-        enum: [ "PF", "PG"]
-  BaseResponse:
-    type: object
-    required:
-      - message
-    properties:
-      message:
-        type: string
-  PersonsData:
-    type: object
-    required:
-      - ticketNumber
-    properties:
-      ticketNumber:
-        type: string
-      deanonimization:
-        type: boolean
-      taxId:
-        type: string
-      personId:
-        type: string
-      iun:
-        type: string
-      dateFrom:
-        type: string
-      dateTo:
-        type: string
-      recipientType:
-        type: string
-        enum: [ "PF", "PG"]
-  ProcessData:
-    type: object
-    required:
-      - ticketNumber
-      - traceId
-      - dateFrom
-      - dateTo
-    properties:
-      ticketNumber:
-        type: string
-      traceId:
-        type: string
-      dateFrom:
-        type: string
-      dateTo:
-        type: string
-  MonthlyNotifications:
-    type: object
-    required:
-      - ticketNumber
-      - publicAuthorityName
-      - referenceMonth
-      - endMonth
-    properties:
-      ticketNumber:
-        type: string
-      publicAuthorityName:
-        type: string
-      referenceMonth:
-        type: string
-      endMonth:
-        type: string
-  OperatorsInfo:
-    type: object
-    required:
-      - ticketNumber
-      - taxId
-      - dateFrom
-      - dateTo
-    properties:
-      ticketNumber:
-        type: string
-      taxId:
-        type: string
-      dateFrom:
-        type: string
-      dateTo:
-        type: string
-  NotificationInfo:
-    type: object
-    required:
-      - ticketNumber
-      - iun
-    properties:
-      ticketNumber:
-        type: string
-      iun:
-        type: string
-  PersonData:
-    type: object
-    required:
-      - data
-    properties:
-      data:
-        type: string
-        example: qwerty
-  ApiError400:
-    type: object
-    required:
-      - message
-    properties:
-      message:
-        type: string
-        example: Informazioni non valide
-  ApiError500:
-    type: object
-    required:
-      - message
-    properties:
-      message:
-        type: string
-        example: Errore nell'elaborazione della richiesta
+          description: Errors during the request elaboration
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+  "/health-check/status":
+    get:
+      tags:
+        - healthCheck
+      operationId: getHealthStatus
+      description: Get the application status
+      responses:
+        '204':
+          description: The application is running
+components:
+  schemas:
+    PersonPersonIdRequestDto:
+      type: object
+      required:
+        - ticketNumber
+        - taxId
+        - recipientType
+      properties:
+        ticketNumber:
+          type: string
+          nullable: false
+        taxId:
+          type: string
+          minLength: 16
+          maxLength: 16
+          pattern: '^([A-Za-z]{6}[0-9lmnpqrstuvLMNPQRSTUV]{2}[abcdehlmprstABCDEHLMPRST]{1}[0-9lmnpqrstuvLMNPQRSTUV]{2}[A-Za-z]{1}[0-9lmnpqrstuvLMNPQRSTUV]{3}[A-Za-z]{1})|([0-9]{11})$'
+          nullable: false
+        recipientType:
+          $ref: '#/components/schemas/RecipientTypes'
+    PersonTaxIdRequestDto:
+      type: object
+      required:
+        - personId
+      properties:
+        personId:
+          type: string
+          minLength: 1
+          maxLength: 100
+          pattern: '[A-Za-z0-9~_-]*'
+    NotificationInfoRequestDto:
+      type: object
+      required:
+        - ticketNumber
+        - iun
+      properties:
+        ticketNumber:
+          type: string
+          nullable: false
+        iun:
+          type: string
+          nullable: false
+          minLength: 25
+          maxLength: 25
+    MonthlyNotificationsRequestDto:
+      type: object
+      required:
+        - ticketNumber
+        - publicAuthorityName
+        - referenceMonth
+        - endMonth
+      properties:
+        ticketNumber:
+          type: string
+          nullable: false
+        publicAuthorityName:
+          type: string
+          nullable: false
+        referenceMonth:
+          type: string
+          nullable: false
+          pattern: '([0-9]{4})-(?:[0-9]{2})-01T00:00:00.000Z'
+        endMonth:
+          type: string
+          nullable: false
+          pattern: '([0-9]{4})-(?:[0-9]{2})-([0-9]{2})T00:00:00.000Z'
+    PersonLogsRequestDto:
+      type: object
+      required:
+        - ticketNumber
+      properties:
+        ticketNumber:
+          type: string
+          nullable: false
+        deanonimization:
+          type: boolean
+          nullable: false
+        taxId:
+          type: string
+          pattern: '^([A-Za-z]{6}[0-9lmnpqrstuvLMNPQRSTUV]{2}[abcdehlmprstABCDEHLMPRST]{1}[0-9lmnpqrstuvLMNPQRSTUV]{2}[A-Za-z]{1}[0-9lmnpqrstuvLMNPQRSTUV]{3}[A-Za-z]{1})|([0-9]{11})$'
+        personId:
+          type: string
+        iun:
+          type: string
+          minLength: 25
+          maxLength: 25
+          pattern: '([A-Za-z]{4})-([A-Za-z]{4})-([A-Za-z]{4})-([0-9]{6})-([A-Za-z]{1})-([0-9]{1})'
+        dateFrom:
+          type: string
+          pattern: '([0-9]{4})-(?:[0-9]{2})-([0-9]{2})'
+        dateTo:
+          type: string
+          pattern: '([0-9]{4})-(?:[0-9]{2})-([0-9]{2})'
+        recipientType:
+          $ref: '#/components/schemas/RecipientTypes'
+    TraceIdLogsRequestDto:
+      type: object
+      required:
+        - traceId
+        - dateFrom
+        - dateTo
+      properties:
+        traceId:
+          type: string
+          nullable: false
+        dateFrom:
+          type: string
+          nullable: false
+          pattern: '([0-9]{4})-(?:[0-9]{2})-([0-9]{2})'
+        dateTo:
+          type: string
+          nullable: false
+          pattern: '([0-9]{4})-(?:[0-9]{2})-([0-9]{2})'
+    GetBasicDataResponseDto:
+      type: object
+      required:
+        - data
+        - message
+      properties:
+        data:
+          type: string
+        message:
+          type: string
+    BaseResponseDTO:
+      type: object
+      required:
+        - message
+      properties:
+        message:
+          type: string
+    ApiError:
+      type: object
+      required:
+        - message
+      properties:
+        message:
+          type: string
+    RecipientTypes:
+      type: string
+      enum: [ "PF", "PG"]
