# src/main/java/it/gov/pagopa/logextractor/exception/RestExceptionHandler.java
@@ -1,8 +1,7 @@
 package it.gov.pagopa.logextractor.exception;
 
 import java.io.IOException;
-//import javax.validation.ConstraintViolation;
-//import javax.validation.ConstraintViolationException;
+import it.gov.pagopa.logextractor.pn_logextractor_be.model.ApiError;
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.springframework.core.Ordered;
 import org.springframework.core.annotation.Order;
@@ -14,7 +13,6 @@ import org.springframework.web.client.HttpServerErrorException;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 import com.opencsv.exceptions.CsvDataTypeMismatchException;
 import com.opencsv.exceptions.CsvRequiredFieldEmptyException;
-import it.gov.pagopa.logextractor.dto.response.ApiError;
 import it.gov.pagopa.logextractor.util.ResponseConstants;
 import lombok.extern.slf4j.Slf4j;
 
@@ -35,7 +33,9 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
 	@ExceptionHandler(LogExtractorException.class)
     protected ResponseEntity<ApiError> handleLogExtractorException(LogExtractorException ex) {
         log.error(ExceptionUtils.getStackTrace(ex));
-        return ResponseEntity.internalServerError().body(new ApiError(ResponseConstants.GENERIC_INTERNAL_SERVER_ERROR));
+		ApiError errorResponse = new ApiError();
+		errorResponse.setMessage(ResponseConstants.GENERIC_INTERNAL_SERVER_ERROR);
+        return ResponseEntity.internalServerError().body(errorResponse);
     }
 	
 	/**
@@ -47,7 +47,9 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
 	@ExceptionHandler(IOException.class)
     protected ResponseEntity<ApiError> handleIOException(IOException ex) {
         log.error(ExceptionUtils.getStackTrace(ex));
-        return ResponseEntity.internalServerError().body(new ApiError(ResponseConstants.GENERIC_INTERNAL_SERVER_ERROR));
+		ApiError errorResponse = new ApiError();
+		errorResponse.setMessage(ResponseConstants.GENERIC_INTERNAL_SERVER_ERROR);
+		return ResponseEntity.internalServerError().body(errorResponse);
     }
 	
 	/**
@@ -59,7 +61,9 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
 	@ExceptionHandler(CsvDataTypeMismatchException.class)
     protected ResponseEntity<ApiError> handleCsvDataTypeMismatchException(CsvDataTypeMismatchException ex) {
         log.error(ExceptionUtils.getStackTrace(ex));
-        return ResponseEntity.internalServerError().body(new ApiError(ResponseConstants.GENERIC_INTERNAL_SERVER_ERROR));
+		ApiError errorResponse = new ApiError();
+		errorResponse.setMessage(ResponseConstants.GENERIC_INTERNAL_SERVER_ERROR);
+		return ResponseEntity.internalServerError().body(errorResponse);
     }
 	
 	/**
@@ -71,7 +75,9 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
 	@ExceptionHandler(CsvRequiredFieldEmptyException.class)
     protected ResponseEntity<ApiError> handleCsvRequiredFieldEmptyException(CsvRequiredFieldEmptyException ex) {
         log.error(ExceptionUtils.getStackTrace(ex));
-        return ResponseEntity.internalServerError().body(new ApiError(ResponseConstants.GENERIC_INTERNAL_SERVER_ERROR));
+		ApiError errorResponse = new ApiError();
+		errorResponse.setMessage(ResponseConstants.GENERIC_INTERNAL_SERVER_ERROR);
+		return ResponseEntity.internalServerError().body(errorResponse);
     }
 	
 	/**
@@ -83,7 +89,9 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
 	@ExceptionHandler(HttpServerErrorException.class)
     protected ResponseEntity<ApiError> handleHttpServerErrorException(HttpServerErrorException ex) {
         log.error(ExceptionUtils.getStackTrace(ex));
-        return ResponseEntity.internalServerError().body(new ApiError(ResponseConstants.GENERIC_INTERNAL_SERVER_ERROR));
+		ApiError errorResponse = new ApiError();
+		errorResponse.setMessage(ResponseConstants.GENERIC_INTERNAL_SERVER_ERROR);
+		return ResponseEntity.internalServerError().body(errorResponse);
     }
 	
 	/**
@@ -95,7 +103,9 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
 	@ExceptionHandler(HttpClientErrorException.class)
 	protected ResponseEntity<ApiError> handleHttpServerErrorException(HttpClientErrorException ex) {
 		log.error(ExceptionUtils.getStackTrace(ex));
-		return ResponseEntity.internalServerError().body(new ApiError(ResponseConstants.GENERIC_INTERNAL_SERVER_ERROR));
+		ApiError errorResponse = new ApiError();
+		errorResponse.setMessage(ResponseConstants.GENERIC_INTERNAL_SERVER_ERROR);
+		return ResponseEntity.internalServerError().body(errorResponse);
 	}
 	
 	/**
@@ -107,6 +117,8 @@ public class RestExceptionHandler extends ResponseEntityExceptionHandler {
 	@ExceptionHandler(InterruptedException.class)
     protected ResponseEntity<ApiError> handleInterruptedException(InterruptedException ex) {
         log.error(ExceptionUtils.getStackTrace(ex));
-        return ResponseEntity.internalServerError().body(new ApiError(ResponseConstants.GENERIC_INTERNAL_SERVER_ERROR));
+		ApiError errorResponse = new ApiError();
+		errorResponse.setMessage(ResponseConstants.GENERIC_INTERNAL_SERVER_ERROR);
+		return ResponseEntity.internalServerError().body(errorResponse);
     }
 }
