# src/main/java/it/gov/pagopa/logextractor/rest/PersonController.java
@@ -1,34 +1,27 @@
 package it.gov.pagopa.logextractor.rest;
 
-import javax.validation.Valid;
+import it.gov.pagopa.logextractor.pn_logextractor_be.api.PersonsApi;
+import it.gov.pagopa.logextractor.pn_logextractor_be.model.GetBasicDataResponseDto;
+import it.gov.pagopa.logextractor.pn_logextractor_be.model.PersonPersonIdRequestDto;
+import it.gov.pagopa.logextractor.pn_logextractor_be.model.PersonTaxIdRequestDto;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.client.HttpServerErrorException;
-import it.gov.pagopa.logextractor.dto.request.PersonPersonIdRequestDto;
-import it.gov.pagopa.logextractor.dto.request.PersonTaxIdRequestDto;
-import it.gov.pagopa.logextractor.dto.response.GetBasicDataResponseDto;
-import it.gov.pagopa.logextractor.exception.LogExtractorException;
 import it.gov.pagopa.logextractor.service.PersonService;
-import it.gov.pagopa.logextractor.util.RecipientTypes;
 
 @RestController
-@RequestMapping("/logextractor/v1/persons")
-public class PersonController {
+public class PersonController implements PersonsApi {
 
 	@Autowired
 	PersonService personService;
-	
-	@PostMapping("/person-id")
-	public ResponseEntity<GetBasicDataResponseDto> getPersonalPersonId(@Valid @RequestBody PersonPersonIdRequestDto personData) throws HttpServerErrorException, LogExtractorException {
-		return ResponseEntity.ok(personService.getPersonId(RecipientTypes.valueOf(personData.getRecipientType()), personData.getTicketNumber(), personData.getTaxId().toUpperCase()));
+
+	@Override
+	public ResponseEntity<GetBasicDataResponseDto> getPersonalPersonId(PersonPersonIdRequestDto personPersonIdRequestDto) throws Exception {
+		return ResponseEntity.ok(personService.getPersonId(personPersonIdRequestDto.getRecipientType(), personPersonIdRequestDto.getTicketNumber(), personPersonIdRequestDto.getTaxId().toUpperCase()));
 	}
-	
-	@PostMapping("/tax-id")
-	public ResponseEntity<GetBasicDataResponseDto> getPersonalTaxId(@Valid @RequestBody PersonTaxIdRequestDto personData) throws HttpServerErrorException, LogExtractorException {
-		return ResponseEntity.ok(personService.getTaxId(personData.getPersonId()));
+
+	@Override
+	public ResponseEntity<GetBasicDataResponseDto> getPersonalTaxId(PersonTaxIdRequestDto personTaxIdRequestDto) throws Exception {
+		return ResponseEntity.ok(personService.getTaxId(personTaxIdRequestDto.getPersonId()));
 	}
 }
